--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Brym CodeIN · Software Portfolio</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link href="dist/output.css?v=2.0" rel="stylesheet" />
+  <link href="dist/output.min.css?v=20250903" rel="stylesheet" />
 
   <style>
     :root {
@@ -28,7 +28,8 @@
     }
   </style>
 
-  <script src="js/scroll.js"></script>
+  <!-- <script src="js/scroll.js"></script> -->
+<script src="js/scroll.min.js?v=20250903" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
@@ -68,8 +69,8 @@
   </nav>
 </header>
   
-<section id="about" class="text-center py-24 scroll-mt-28">
-  <h2 class="text-3xl md:text-4xl font-bold text-[#58a6ff] mb-6 tracking-wide transition hover:scale-105">Perfil profesional</h2>
+<section id="about" class="py-24 px-6 text-center scroll-mt-28">
+  <h3 class="text-4xl font-bold font-inter text-[#58a6ff] mb-12 transition hover:scale-105">Perfil profesional</h3>
   
   <a href="#about">
     <img 
@@ -236,7 +237,7 @@
               <div class="p-5 text-center">
                 <h4 class="text-xl font-semibold text-[#58a6ff] mb-2">NovaBank</h4>
                 <p class="text-sm mb-4 leading-relaxed">
-                  Aplicación de escritorio bancario con funcionalidades como transacciones, depósitos, retiros y consultas y gesitón de clientes. Desarrollado con Java, MySQL y ASP.NET Forms.
+                  Aplicación de escritorio bancario con funcionalidades como transacciones, depósitos, retiros y consultas y gesitón de clientes. Desarrollado con Java, MySQL y Windows Forms.
                 </p>
                 <a href="https://github.com/FourscodeIN/Aplicacion_Escritorio_JAVA" target="_blank"
                   class="inline-flex items-center gap-2 bg-[#21262d] text-[#c9d1d9] px-5 py-2 rounded-lg hover:bg-[#30363d] transition duration-300">
@@ -274,6 +275,14 @@
     <p class="text-white mb-4">¿Quieres trabajar conmigo o tienes alguna pregunta? ¡Contáctame!</p>
 
     <div class="flex flex-col gap-4 mt-8">
+
+      <!-- GitHub -->
+      <a href="https://github.com/FourscodeIN" target="_blank"
+        class="flex items-center justify-center gap-3 bg-[#21262d] text-[#c9d1d9] px-5 py-3 rounded-full shadow-md hover:bg-[#30363d] hover:scale-105 transition-transform duration-300 w-full sm:w-auto mx-auto">
+        <i class="fab fa-github text-lg"></i>
+        Ver Github personal
+      </a>
+
       <!-- Instagram -->
       <a href="https://www.instagram.com/brym.palacio/" target="_blank"
         class="text-white rounded-full shadow-md hover:scale-105 transform transition duration-300 w-full sm:w-auto mx-auto flex items-center justify-center gap-3 px-5 py-3"
@@ -296,18 +305,11 @@
         teamdczx@gmail.com
       </a>
 
-      <!-- GitHub -->
-      <a href="https://github.com/FourscodeIN" target="_blank"
-        class="flex items-center justify-center gap-3 bg-[#21262d] text-[#c9d1d9] px-5 py-3 rounded-full shadow-md hover:bg-[#30363d] hover:scale-105 transition-transform duration-300 w-full sm:w-auto mx-auto">
-        <i class="fab fa-github text-lg"></i>
-        github.com/FourscodeIN
-      </a>
-
       <!-- LinkedIn -->
       <a href="https://www.linkedin.com/in/brayan-mesa-palacio/" target="_blank"
         class="flex items-center justify-center gap-3 bg-blue-600 text-white px-5 py-3 rounded-full shadow-md hover:bg-blue-700 hover:scale-105 transition-transform duration-300 w-full sm:w-auto mx-auto">
         <i class="fab fa-linkedin text-lg"></i>
-        linkedin.com/in/brayan-mesa-palacio
+        Conoce mi perfil de LinkedIn
       </a>
     </div>
   </div>
