--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Brym CodeIN · Software Portfolio</title>
+  <title>Brym — Portafolio profesional</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link href="dist/output.min.css?v=20250903" rel="stylesheet" />
 
@@ -29,7 +29,7 @@
   </style>
 
   <!-- <script src="js/scroll.js"></script> -->
-<script src="js/scroll.min.js?v=20250903" defer></script>
+  <script src="js/scroll.min.js?v=20250903" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
@@ -319,8 +319,10 @@
   <i class="fas fa-arrow-up"></i>
 </a>
 
-<footer class="bg-[#0d1117] text-white py-4 text-center">
-  <p>&copy; 2025 — Brym CodeIN · Software Portfolio</p>
+<footer class="bg-[#0d1117] text-white py-4 text-center px-2">
+  <p class="text-sm sm:text-base leading-relaxed">
+    &copy; 2025 — Brym CodeIN · Software Portfolio
+  </p>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
