--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
 </header>
   
 <section id="about" class="py-24 px-6 text-center scroll-mt-28">
-  <h3 class="text-4xl font-bold font-inter text-[#58a6ff] mb-12 transition hover:scale-105">Perfil profesional</h3>
+<div class="inline-block overflow-hidden">
+  <h3 class="text-4xl font-bold font-inter text-[#58a6ff] mb-12 transition-transform duration-300 hover:scale-105">
+    Perfil profesional
+  </h3>
+</div>
   
   <a href="#about">
     <img 
@@ -219,7 +223,7 @@
           <div class="p-5 text-center">
             <h4 class="text-xl font-semibold text-[#58a6ff] mb-2">Library Manager</h4>
             <p class="text-sm mb-4 leading-relaxed">
-              Aplicación de escritorio para un sistema bibliotecario, con funcionalidades como registro, búsqueda, eliminación y diferentes gestiones de recursos. Desarrollado con C#, MySQL y ASP.NET Framework.
+              Aplicación de escritorio para un sistema bibliotecario, con funcionalidades como registro, búsqueda, eliminación y diferentes gestiones de recursos. Desarrollado con C#, MySQL y .NET Framework.
             </p>
             <a href="https://github.com/FourscodeIN" target="_blank"
               class="inline-flex items-center gap-2 bg-[#21262d] text-[#c9d1d9] px-5 py-2 rounded-lg hover:bg-[#30363d] transition duration-300">
@@ -237,7 +241,7 @@
               <div class="p-5 text-center">
                 <h4 class="text-xl font-semibold text-[#58a6ff] mb-2">NovaBank</h4>
                 <p class="text-sm mb-4 leading-relaxed">
-                  Aplicación de escritorio bancario con funcionalidades como transacciones, depósitos, retiros y consultas y gesitón de clientes. Desarrollado con Java, MySQL y Windows Forms.
+                  Aplicación de escritorio bancario con funcionalidades como transacciones, depósitos, retiros, consultas y gesitón de clientes. Desarrollado con Java, MySQL y Windows Forms.
                 </p>
                 <a href="https://github.com/FourscodeIN/Aplicacion_Escritorio_JAVA" target="_blank"
                   class="inline-flex items-center gap-2 bg-[#21262d] text-[#c9d1d9] px-5 py-2 rounded-lg hover:bg-[#30363d] transition duration-300">
@@ -250,12 +254,12 @@
           <div class=" rounded-xl overflow-hidden shadow-sm border border-[#30363d] bg-[#0d1117] transition hover:scale-[1.03] duration-300">
             <div class="transition-transform transform hover:scale-105 duration-300">
               <figure>
-                <img src="assets/images/servipronew.webp" alt="Vista previa de ServiPro" class="w-full h-40 object-cover" />
+                <img src="assets/images/LOGO-SERVIPRO.webp" alt="Vista previa de ServiPro" class="w-full h-40 object-cover" />
               </figure>
               <div class="p-5 text-center">
                 <h4 class="text-xl font-semibold text-[#58a6ff] mb-2">ServiPro</h4>
                 <p class="text-sm mb-4 leading-relaxed">
-                  Página Web para una asociación de servicio personalizado en el área de sistemas, ofreciendo así diferentes servicios como lo son soporte técnico, reparación y venta de insumos. Desarrollada con HTML5, CSS3 y Javascript.
+                  Página Web para una asociación de servicio personalizado en el área de sistemas, ofreciendo así diferentes servicios como lo son soporte técnico, reparación y venta de insumos. Desarrollada con HTML, CSS y Javascript.
                 </p>
                 <a href="https://serviprof.com.co/" target="_blank"
                    class="inline-flex items-center gap-2 bg-[#21262d] text-[#c9d1d9] px-5 py-2 rounded-lg hover:bg-[#30363d] transition duration-300">
@@ -319,12 +323,24 @@
   <i class="fas fa-arrow-up"></i>
 </a>
 
-<footer class="bg-[#0d1117] text-white py-4 text-center px-2">
+<!-- <footer class="bg-[#0d1117] text-white py-4 text-center px-2">
   <p class="text-sm sm:text-base leading-relaxed">
     &copy; 2025 — Brym CodeIN · Software Portfolio
   </p>
-</footer>
+</footer> -->
 
+<!-- <span class="text-[#58a6ff] font-semibold">Brym CodeIN</span>  -->
+
+<footer class="bg-[#0d1117] text-white py-4 text-center px-3 border-t border-gray-800">
+  <p class="text-sm sm:text-base leading-relaxed">
+    &copy; 2025 — <span class="font-semibold">Brym CodeIN</span> · Software Portfolio
+  </p>
+  <p class="text-sm sm:text-base mt-1 leading-relaxed">
+     Desarrollado con <span class="font-semibold text-red-600">HTML</span>, 
+    <span class="font-semibold text-[#58a6ff]">Tailwind CSS</span> y 
+    <span class="font-semibold text-yellow-400">JavaScript</span>.
+  </p>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 
 </body>
