feat(main) Se hacen ajustes de rendimiento y visuales.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Brym — Portafolio profesional</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link href="dist/output.min.css?v=20250903" rel="stylesheet" />
+  <link href="dist/output.css" rel="stylesheet">
+  <!-- <link href="dist/output.min.css?v=20250903" rel="stylesheet" /> -->
 
   <style>
     :root {
@@ -117,30 +118,28 @@
           <h4 class="text-xl font-semibold text-gray-300" data-aos="fade-up">Lenguajes de programación</h4>
         </div>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 w-full" data-aos="fade-up">
-
-          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-12 transform hover:scale-105">
+          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-12 hover:scale-105">
             <i class="fab fa-java text-4xl text-red-500" title="Java" role="button"></i>
             <span class="text-sm font-medium text-[#c9d1d9] mt-2">Java</span>
             <div class="w-full bg-[#21262d] rounded-full h-3 overflow-hidden shadow-inner mt-3">
               <div class="bg-[#58a6ff] h-3 rounded-full progress-bar" data-width="68%"></div>
               </div>
           </div>
-
-          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-12 transform hover:scale-105">
+          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-12 hover:scale-105">
             <i class="fas fa-code text-4xl text-purple-600" title="C#" role="button"></i>
             <span class="text-sm font-medium text-[#c9d1d9] mt-2">C# / .NET</span>
             <div class="w-full bg-[#21262d] rounded-full h-3 overflow-hidden shadow-inner mt-3">
               <div class="bg-[#58a6ff] h-3 rounded-full progress-bar" data-width="70%"></div>
             </div>
           </div>
-          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-12 transform hover:scale-105">
+          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-12 hover:scale-105">
             <i class="fab fa-python text-4xl bg-gradient-to-r from-yellow-400 to-blue-700 text-transparent bg-clip-text" title="Python" role="button"></i>
             <span class="text-sm font-medium text-[#c9d1d9] mt-2">Python</span>
             <div class="w-full bg-[#21262d] rounded-full h-3 overflow-hidden shadow-inner mt-3">
               <div class="bg-[#58a6ff] h-3 rounded-full progress-bar" data-width="60%"></div>
             </div>
           </div>
-          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-12 transform hover:scale-105">
+          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-12 hover:scale-105">
             <i class="fab fa-js text-4xl text-yellow-400" title="JavaScript" role="button"></i>
             <span class="text-sm font-medium text-[#c9d1d9] mt-2">JavaScript</span>
             <div class="w-full bg-[#21262d] rounded-full h-3 overflow-hidden shadow-inner mt-3">
@@ -155,24 +154,43 @@
           <picture>
             <img src="https://github.com/7oSkaaa/7oSkaaa/blob/main/Images/Software_Tools.gif?raw=true" width="50" alt="Herramientas" class="w-6 h-6" data-aos="fade-up">
           </picture>
-          <h4 class="text-xl font-semibold text-gray-300" data-aos="fade-up">Software & Herramientas</h4>
+          <h4 class="text-xl font-semibold text-gray-300" data-aos="fade-up">Software & Frameworks</h4>
         </div>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 w-full" data-aos="fade-up">
-          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-12 transform hover:scale-105" title="HTML5">
+          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-6  hover:scale-105" title="HTML5">
             <i class="fab fa-html5 text-4xl text-orange-500" role="button"></i>
             <span class="text-sm font-medium mt-2">HTML5</span>
           </div>
-          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-12 transform hover:scale-105" title="CSS3" >
+          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-6 hover:scale-105" title="CSS3" >
             <i class="fab fa-css3-alt text-4xl text-blue-500" role="button"></i>
             <span class="text-sm font-medium mt-2">CSS3</span>
           </div>
-          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-12 transform hover:scale-105" title="SQL" >
+          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-6 hover:scale-105" title="SQL" >
             <i class="fas fa-database text-4xl text-indigo-700" role="button"></i>
             <span class="text-sm font-mediummt-2">SQL / MySQL</span>
           </div>
-          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-12 transform hover:scale-105" title="Git" >
+          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-6 hover:scale-105" title="Git" >
             <i class="fab fa-git-alt text-4xl text-red-500" role="button"></i>
             <span class="text-sm font-medium mt-2">Git</span>
+          </div>
+          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-6 hover:scale-105" title="Docker" >
+            <i class="fab fa-docker text-4xl text-sky-400" role="button"></i>
+            <span class="text-sm font-medium mt-2 text-gray-300">Docker</span>
+          </div>
+          <!-- Laravel -->
+          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-6 hover:scale-105" title="Laravel" >
+            <i class="fab fa-laravel text-4xl text-red-600" role="button"></i>
+            <span class="text-sm font-medium mt-2 text-gray-300">Laravel</span>
+          </div>
+          <!-- Vue.js -->
+          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-6 hover:scale-105" title="Vue" >
+            <i class="fab fa-vuejs text-4xl text-green-500" role="button"></i>
+            <span class="text-sm font-medium mt-2 text-gray-300">Vue.js</span>
+          </div>
+          <!-- Node.js -->
+          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-6 hover:scale-105" title="Node" >
+            <i class="fab fa-node-js text-4xl text-green-600" role="button"></i>
+            <span class="text-sm font-medium mt-2 text-gray-300">Node.js</span>
           </div>
         </div>
       </div>
@@ -181,14 +199,14 @@
         <picture>
           <img src="https://github.com/7oSkaaa/7oSkaaa/blob/main/Images/IDEs.gif?raw=true" width="50" alt="IDEs" class="w-6 h-6" data-aos="fade-up">
         </picture>
-        <h4 class="text-xl font-semibold text-gray-300" data-aos="fade-up">Frames & IDEs</h4>
+        <h4 class="text-xl font-semibold text-gray-300" data-aos="fade-up">Herramientas & IDEs</h4>
       </div>
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 w-full" data-aos="fade-up">
-          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-12 transform hover:scale-105" title="Github" >
+          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-6 hover:scale-105" title="Github" >
             <i class="fab fa-github text-4xl text-[#c9d1d9]" role="button"></i>
             <span class="text-sm font-medium mt-2">GitHub</span>
           </div>
-          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-12 transform hover:scale-105" title=".NET" >
+          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-6 hover:scale-105" title=".NET" >
             <i class="fas fa-server text-4xl text-blue-700" role="button"></i>
             <span class="text-sm font-medium mt-2">ASP.NET</span>
           </div>
@@ -196,11 +214,11 @@
             <i class="fas fa-code text-4xl text-purple-600 transition-transform transform hover:scale-105 duration-300" role="button"></i>
             <span class="text-sm font-medium">Visual Studio</span>
           </div> -->
-          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-12 transform hover:scale-105"title="Visual" >
+          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-6 hover:scale-105"title="Visual" >
               <i class="fas fa-terminal text-4xl text-blue-500" role="button"></i>
               <span class="text-sm font-medium mt-2">VS & VS Code</span>
           </div>
-          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-12 transform hover:scale-105" title="Agiles"   >
+          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-6 hover:scale-105" title="Agiles" >
             <i class="fas fa-code-branch text-4xl text-emerald-600" role="button"></i>
             <span class="text-sm font-medium mt-2">Metodologías Ágiles</span>
           </div>
@@ -213,10 +231,10 @@
   <div class="max-w-6xl mx-auto">
     <div class="shadow-xl rounded-3xl p-10 bg-[#161b22]">
       <h3 class="text-4xl font-bold font-inter text-center text-[#58a6ff] mb-12 transition hover:scale-105">Proyectos destacados</h3>
-      <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
 
+      <div class="grid md:grid-cols-2 lg:grid-cols-2 gap-6">
         <!-- Proyecto 1 -->
-        <div class="rounded-xl overflow-hidden shadow-md border border-[#30363d] bg-[#0d1117] transition hover:scale-[1.03] duration-300">
+        <!-- <div class="rounded-xl overflow-hidden shadow-md border border-[#30363d] bg-[#0d1117] transition hover:scale-[1.03] duration-300">
           <figure>
             <img src="assets/images/logoSistemaBibliotecario.webp" alt="Vista previa de Library Manager" class="w-full h-40 object-cover" />
           </figure>
@@ -230,48 +248,48 @@
               <i class="fab fa-github text-lg"></i> Ver en GitHub
             </a>
           </div>
-        </div>
-
-          <!-- Proyecto 2 -->
-          <div class=" rounded-xl overflow-hidden shadow-sm border border-[#30363d] bg-[#0d1117] transition hover:scale-[1.03] duration-300">
-            <div class="transition-transform transform hover:scale-105 duration-300">
-              <figure>
-                <img src="assets/images/NovaBank.webp" alt="Vista previa de NovaBank" class="w-full h-40 object-cover" />
-              </figure>
-              <div class="p-5 text-center">
-                <h4 class="text-xl font-semibold text-[#58a6ff] mb-2">NovaBank</h4>
-                <p class="text-sm mb-4 leading-relaxed">
-                  Aplicación de escritorio bancario con funcionalidades como transacciones, depósitos, retiros, consultas y gesitón de clientes. Desarrollado con Java, MySQL y Windows Forms.
-                </p>
-                <a href="https://github.com/FourscodeIN/Aplicacion_Escritorio_JAVA" target="_blank"
-                  class="inline-flex items-center gap-2 bg-[#21262d] text-[#c9d1d9] px-5 py-2 rounded-lg hover:bg-[#30363d] transition duration-300">
-                  <i class="fab fa-github text-lg"></i> Ver en GitHub
-                </a>
-              </div>
+        </div> -->
+        <!-- Proyecto 2 -->
+        <div class=" rounded-xl overflow-hidden shadow-sm border border-[#30363d] bg-[#0d1117] transition hover:scale-[1.03] duration-300">
+          <div class="transition-transform transform hover:scale-105 duration-300">
+            <figure>
+              <img src="assets/images/NovaBank.webp" alt="Vista previa de NovaBank" class="w-full h-40 object-cover" />
+            </figure>
+            <div class="p-5 text-center">
+              <h4 class="text-xl font-semibold text-[#58a6ff] mb-2">NovaBank</h4>
+              <p class="text-sm mb-4 leading-relaxed">
+                Aplicación de escritorio bancario con funcionalidades como transacciones, depósitos, retiros, consultas y gesitón de clientes. Desarrollado con Java, MySQL y Windows Forms.
+              </p>
+              <a href="https://github.com/FourscodeIN/Aplicacion_Escritorio_JAVA" target="_blank"
+                class="inline-flex items-center gap-2 bg-[#21262d] text-[#c9d1d9] px-5 py-2 rounded-lg hover:bg-[#30363d] transition duration-300">
+                <i class="fab fa-github text-lg"></i> Ver en GitHub
+              </a>
             </div>
           </div>
-          <!-- Proyecto 3 -->
-          <div class=" rounded-xl overflow-hidden shadow-sm border border-[#30363d] bg-[#0d1117] transition hover:scale-[1.03] duration-300">
-            <div class="transition-transform transform hover:scale-105 duration-300">
-              <figure>
-                <img src="assets/images/LOGO-SERVIPRO.webp" alt="Vista previa de ServiPro" class="w-full h-40 object-cover" />
-              </figure>
-              <div class="p-5 text-center">
-                <h4 class="text-xl font-semibold text-[#58a6ff] mb-2">ServiPro</h4>
-                <p class="text-sm mb-4 leading-relaxed">
-                  Página Web para una asociación de servicio personalizado en el área de sistemas, ofreciendo así diferentes servicios como lo son soporte técnico, reparación y venta de insumos. Desarrollada con HTML, CSS y Javascript.
-                </p>
-                <a href="https://serviprof.com.co/" target="_blank"
-                   class="inline-flex items-center gap-2 bg-[#21262d] text-[#c9d1d9] px-5 py-2 rounded-lg hover:bg-[#30363d] transition duration-300">
-                  <i class="fab fa-github text-lg"></i> Ver en GitHub
-                </a>
-              </div>
+        </div>
+
+        <!-- Proyecto 3 -->
+        <div class=" rounded-xl overflow-hidden shadow-sm border border-[#30363d] bg-[#0d1117] transition hover:scale-[1.03] duration-300">
+          <div class="transition-transform transform hover:scale-105 duration-300">
+            <figure>
+              <img src="assets/images/LOGO-SERVIPRO.webp" alt="Vista previa de ServiPro" class="w-full h-40 object-cover" />
+            </figure>
+            <div class="p-5 text-center">
+              <h4 class="text-xl font-semibold text-[#58a6ff] mb-2">ServiPro</h4>
+              <p class="text-sm mb-4 leading-relaxed">
+                Página Web para una asociación de servicio personalizado en el área de sistemas, ofreciendo así diferentes servicios como lo son soporte técnico, reparación y venta de insumos. Desarrollada con HTML, CSS y Javascript.
+              </p>
+              <a href="https://serviprof.com.co/" target="_blank"
+                  class="inline-flex items-center gap-2 bg-[#21262d] text-[#c9d1d9] px-5 py-2 rounded-lg hover:bg-[#30363d] transition duration-300">
+                <i class="fab fa-github text-lg"></i> Ver en GitHub
+              </a>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
 <section id="contact" class="py-24 px-6 text-center scroll-mt-28">
   <div class="max-w-xl mx-auto">
@@ -322,14 +340,6 @@
 <a href="#page-top" id="backToTop" class="fixed bottom-6 right-6 hidden bg-[#58a6ff] hover:bg-[#1f6feb] text-white p-3 rounded-full shadow-lg transition duration-300 z-50">
   <i class="fas fa-arrow-up"></i>
 </a>
-
-<!-- <footer class="bg-[#0d1117] text-white py-4 text-center px-2">
-  <p class="text-sm sm:text-base leading-relaxed">
-    &copy; 2025 — Brym CodeIN · Software Portfolio
-  </p>
-</footer> -->
-
-<!-- <span class="text-[#58a6ff] font-semibold">Brym CodeIN</span>  -->
 
 <footer class="bg-[#0d1117] text-white py-4 text-center px-3 border-t border-gray-800">
   <p class="text-sm sm:text-base leading-relaxed">
