Se agregan los nuevos proyectos

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Brym — Portafolio profesional</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link href="dist/output.css" rel="stylesheet">
-  <!-- <link href="dist/output.min.css?v=20250903" rel="stylesheet" /> -->
+  <!-- <link href="dist/output.css" rel="stylesheet"> -->
+  <link href="dist/output.min.css?v=20250903" rel="stylesheet" />
 
   <style>
     :root {
@@ -173,24 +173,24 @@
             <i class="fab fa-git-alt text-4xl text-red-500" role="button"></i>
             <span class="text-sm font-medium mt-2">Git</span>
           </div>
-          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-6 hover:scale-105" title="Docker" >
-            <i class="fab fa-docker text-4xl text-sky-400" role="button"></i>
-            <span class="text-sm font-medium mt-2 text-gray-300">Docker</span>
-          </div>
           <!-- Laravel -->
           <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-6 hover:scale-105" title="Laravel" >
             <i class="fab fa-laravel text-4xl text-red-600" role="button"></i>
             <span class="text-sm font-medium mt-2 text-gray-300">Laravel</span>
+          </div>
+          <!-- Node.js -->
+          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-6 hover:scale-105" title="Node" >
+            <i class="fab fa-node-js text-4xl text-green-600" role="button"></i>
+            <span class="text-sm font-medium mt-2 text-gray-300">Node.js</span>
           </div>
           <!-- Vue.js -->
           <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-6 hover:scale-105" title="Vue" >
             <i class="fab fa-vuejs text-4xl text-green-500" role="button"></i>
             <span class="text-sm font-medium mt-2 text-gray-300">Vue.js</span>
           </div>
-          <!-- Node.js -->
-          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-6 hover:scale-105" title="Node" >
-            <i class="fab fa-node-js text-4xl text-green-600" role="button"></i>
-            <span class="text-sm font-medium mt-2 text-gray-300">Node.js</span>
+          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-6 hover:scale-105" title=".NET" >
+            <i class="fas fa-server text-4xl text-blue-700" role="button"></i>
+            <span class="text-sm font-medium mt-2">ASP.NET</span>
           </div>
         </div>
       </div>
@@ -206,14 +206,10 @@
             <i class="fab fa-github text-4xl text-[#c9d1d9]" role="button"></i>
             <span class="text-sm font-medium mt-2">GitHub</span>
           </div>
-          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-6 hover:scale-105" title=".NET" >
-            <i class="fas fa-server text-4xl text-blue-700" role="button"></i>
-            <span class="text-sm font-medium mt-2">ASP.NET</span>
+          <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-6 hover:scale-105" title="Docker" >
+            <i class="fab fa-docker text-4xl text-sky-400" role="button"></i>
+            <span class="text-sm font-medium mt-2 text-gray-300">Docker</span>
           </div>
-          <!-- <div class="flex flex-col items-center space-y-2 w-full px-4" data-aos="fade-up">
-            <i class="fas fa-code text-4xl text-purple-600 transition-transform transform hover:scale-105 duration-300" role="button"></i>
-            <span class="text-sm font-medium">Visual Studio</span>
-          </div> -->
           <div class="flex flex-col items-center justify-center w-full px-4 py-4 rounded-xl bg-[#161b22] hover:bg-[#21262d] transition-transform duration-300 group mb-6 hover:scale-105"title="Visual" >
               <i class="fas fa-terminal text-4xl text-blue-500" role="button"></i>
               <span class="text-sm font-medium mt-2">VS & VS Code</span>
@@ -279,7 +275,51 @@
               <p class="text-sm mb-4 leading-relaxed">
                 Página Web para una asociación de servicio personalizado en el área de sistemas, ofreciendo así diferentes servicios como lo son soporte técnico, reparación y venta de insumos. Desarrollada con HTML, CSS y Javascript.
               </p>
-              <a href="https://serviprof.com.co/" target="_blank"
+              <div class="flex justify-center gap-3 flex-wrap">
+                <a href="https://github.com/FourscodeIN/Servipro---Desarrollo" target="_blank"
+                  class="inline-flex items-center gap-2 bg-[#21262d] text-[#c9d1d9] px-5 py-2 rounded-lg hover:bg-[#30363d] transition duration-300">
+                  <i class="fab fa-github text-lg"></i> Ver en GitHub
+                </a>
+                <a href="https://serviprof.com.co/" target="_blank"
+                  class="inline-flex items-center gap-2 bg-blue-500 text-[#c9d1d9] px-5 py-2 rounded-lg hover:bg-[#1f6feb] transition duration-300">
+                  <i class="fas fa-globe text-lg"></i> Plataforma
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Proyecto 4 -->
+        <div class=" rounded-xl overflow-hidden shadow-sm border border-[#30363d] bg-[#0d1117] transition hover:scale-[1.03] duration-300">
+          <div class="transition-transform transform hover:scale-105 duration-300">
+            <figure>
+              <img src="assets/images/Black-and-White-Minimalist-Modern-Clean-Technology-Logo-.webp" alt="Vista previa de proyecto IA" class="w-full h-40 object-cover" />
+            </figure>
+            <div class="p-5 text-center">
+              <h4 class="text-xl font-semibold text-[#58a6ff] mb-2">Sistema de Gestión Inteligente con IA</h4>
+              <p class="text-sm mb-4 leading-relaxed">
+                Diseño e implementación de un sistema modular de gestión de proyectos con backend en Node.js y frontend en Vue.js, desplegado en contenedores Docker. Integración con OpenAI API para generación de texto y análisis de datos.
+              </p>
+              <a href="https://github.com/FourscodeIN/glocation-prueba-tecnica" target="_blank"
+                  class="inline-flex items-center gap-2 bg-[#21262d] text-[#c9d1d9] px-5 py-2 rounded-lg hover:bg-[#30363d] transition duration-300">
+                <i class="fab fa-github text-lg"></i> Ver en GitHub
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Proyecto 5 -->
+        <div class=" rounded-xl overflow-hidden shadow-sm border border-[#30363d] bg-[#0d1117] transition hover:scale-[1.03] duration-300">
+          <div class="transition-transform transform hover:scale-105 duration-300">
+            <figure>
+              <img src="assets/images/Logotipo-de-empresa-de-programación-de-sistemas-y-tecnología-_1_.webp" alt="Vista previa de AuthManagement" class="w-full h-40 object-cover" />
+            </figure>
+            <div class="p-5 text-center">
+              <h4 class="text-xl font-semibold text-[#58a6ff] mb-2">AuthManagement</h4>
+              <p class="text-sm mb-4 leading-relaxed">
+                Desarrollo full stack de una aplicación web con autenticación avanzada y control de acceso mediante Laravel Sanctum. Incluye componentes dinámicos en Vue.js, API REST modular y gestión eficiente de usuarios. 
+              </p>
+              <a href="https://github.com/FourscodeIN/iyata-assessment-frontend" target="_blank"
                   class="inline-flex items-center gap-2 bg-[#21262d] text-[#c9d1d9] px-5 py-2 rounded-lg hover:bg-[#30363d] transition duration-300">
                 <i class="fab fa-github text-lg"></i> Ver en GitHub
               </a>
