Botón nuevo responsive móvil

--- a/index.html
+++ b/index.html
@@ -275,13 +275,13 @@
               <p class="text-sm mb-4 leading-relaxed">
                 Página Web para una asociación de servicio personalizado en el área de sistemas, ofreciendo así diferentes servicios como lo son soporte técnico, reparación y venta de insumos. Desarrollada con HTML, CSS y Javascript.
               </p>
-              <div class="flex justify-center gap-3 flex-wrap">
+              <div class="flex flex-wrap justify-center gap-3 mt-4">
                 <a href="https://github.com/FourscodeIN/Servipro---Desarrollo" target="_blank"
-                  class="inline-flex items-center gap-2 bg-[#21262d] text-[#c9d1d9] px-5 py-2 rounded-lg hover:bg-[#30363d] transition duration-300">
+                  class="inline-flex items-center justify-center gap-2 bg-[#21262d] text-[#c9d1d9] px-5 py-2 rounded-lg hover:bg-[#30363d] transition duration-300 w-full sm:w-auto">
                   <i class="fab fa-github text-lg"></i> Ver en GitHub
                 </a>
                 <a href="https://serviprof.com.co/" target="_blank"
-                  class="inline-flex items-center gap-2 bg-blue-500 text-[#c9d1d9] px-5 py-2 rounded-lg hover:bg-[#1f6feb] transition duration-300">
+                  class="inline-flex items-center justify-center gap-2 bg-blue-500 text-[#c9d1d9] px-5 py-2 rounded-lg hover:bg-[#1f6feb] transition duration-300 w-full sm:w-auto">
                   <i class="fas fa-globe text-lg"></i> Plataforma
                 </a>
               </div>
